# molecule-qemu

./: .ansible-lint  .ansible-lint-ignore  .envrc  .gitignore  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  requirements.yml
.github/workflows/: ansible-lint.yml  ansible-test.yml  lint.yml  publish.yml  pycodestyle.yml  python-lint.yml  python-package.yml  python-publish.yml  python-release.yml  release.yml
molecule_qemu/: driver.json  driver.py
molecule_qemu/cookiecutter/{{cookiecutter.molecule_directory}}/{{cookiecutter.scenario_name}}/: collections.yml  converge.yml  prepare.yml
molecule_qemu/playbooks/: QEMU_EFI.fd  cleanup.yml  create.yml  destroy.yml  edk2-aarch64.fd  edk2-x86_64.fd  requirements.yml  side_effect.yml
molecule_qemu/playbooks/templates/: user-data.j2
tests/molecule/default/: converge.yml  molecule.yml  verify.yml
tests/molecule/network-shared/: molecule.yml
tests/molecule/network-user/: molecule.yml
tests/molecule/os-debian-bookworm/: molecule.yml  prepare.yml
tests/molecule/os-debian-bullseye/: molecule.yml
tests/molecule/os-ubuntu-focal/: molecule.yml
tests/molecule/os-ubuntu-jammy/: molecule.yml
tests/molecule/os-ubuntu-noble/: molecule.yml
tests/molecule/platform-amd64/: molecule.yml  prepare.yml
tests/molecule/platform-arm64/: molecule.yml
tests/molecule/vmnet-shared/: converge.yml  molecule.yml
